--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Guia GAC Brasil
 description: Repositório colaborativo com informações a respeito dos veículos da GAC no Brasil.
-remote_theme: "mmistakes/minimal-mistakes"
 baseurl: "/guia-gac-brasil" 
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  - jekyll-remote-theme
