--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+
+minimal_mistakes_skin: "dark" 
+minimal_mistakes_skin2: "default"
